<resources>
    <string name="app_name">Retail Demo</string>

    <string name="internal_storage">Internal storage</string>
    <string name="please_enter_message">please enter message</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="inventory">Inventory</string>
    <string name="job">Jobs</string>
    <string name="product_name">Search by Product Name</string>
    <string name="price">Price</string>
    <string name="pickup_store">Pickup Store</string>
    <string name="pickup_date">Date</string>
    <string name="assignee">Assignee</string>
    <string name="logout">Logout</string>
    <string name="location_update">Location Update running</string>
    <string name="are_you_sure_want_to_log_out">Are you sure want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="status">Status</string>
    <string name="pickup_time">Time</string>
    <string name="sku_number">SKU : </string>
    <string name="description">Description</string>
    <string name="quantity">Quantity : </string>
    <string name="dollar">$ </string>
    <string name="menu_home">Home</string>
    <string name="nav_header_title">Android</string>
    <string name="nav_header_subtitle">studio@android.com</string>
    <string name="products_lessthan_5_quantity">Products lessthan 5 quantity</string>
    <string name="profile">Profile</string>
    <string name="add">ADD</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="store_name">Store Name</string>
    <string name="last_name">Last Name</string>
    <string name="my_profile">My Profile</string>
    <string name="welcome_text">Hey,\nLogin Now.</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="first_name_last_name"><![CDATA[First Name & Last Name]]></string>
    <string name="first_name">First Name</string>
    <string name="lase_name">Lase Name</string>
    <string name="email_address">Email Address</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_type">User Type</string>
    <string name="store_user">Store User</string>
    <string name="delivery_person">Delivery Person</string>
    <string name="add_store">+ Add Store</string>
    <string name="create">CREATE</string>
    <string name="edit_stock">Edit Stock</string>
    <string name="increase_or_reduce_your_product_stock">Increase or reduce your product stock.</string>
    <string name="job_type">Job Type</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="add_new">+ ADD NEW</string>
    <string name="cancel">Cancel</string>
    <string name="create_order">Create Order</string>
    <string name="create_new_order_header">Create New Order</string>
    <string name="add_product">+Add Product</string>
    <string name="qty">Qty</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="add_products">Add Products</string>
    <string name="select_assignee">Select Assignee</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="drop_store_name">Drop store name</string>
    <string name="destination_store">Destination Store</string>
    <string name="prefilled_store_name">Prefilled store name</string>
    <string name="pick_up_store">Pick Up Store</string>
    <string name="no_jobs_assigned">No Jobs Assigned.</string>
    <string name="no_jobs">No jobs to show.</string>
    <string name="job_details">Job Details</string>
    <string name="products">Products</string>
    <string name="source_store">Source Store</string>
    <string name="create_new_order">+ CREATE NEW ORDER</string>
    <string name="no_orders_created">No Orders Created.</string>
    <string name="point_of_sale">Point of Sale</string>
    <string name="to_do">To-Do</string>
    <string name="in_progress">In-Progress</string>
    <string name="done">Done</string>
    <string name="swap_stores">Swap Stores</string>
    <string name="order_id">Order ID</string>
    <string name="store_pickup">Store Pickup</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_email">Customer Email</string>
    <string name="pickup">Pickup</string>
    <string name="paid_by">Paid By</string>
    <string name="add_address">Add Address</string>
    <string name="added_products">Added Products</string>
    <string name="next">Next</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="address">Address</string>
    <string name="customer_information">Customer Information</string>
    <string name="payment_information">Payment Information</string>
    <string name="payment_method">Payment Method</string>
    <string name="delete">DELETE</string>
    <string name="payment_status">Payment Status</string>
    <string name="order_summary">Order Summary</string>
    <string name="select_stores">Select Stores</string>
    <string name="select">SELECT</string>
    <string name="product_name_">Product Name</string>
    <string name="add_to_create_job">Add to Create Job</string>
    <string name="create_job">Create Job</string>
    <string name="drop_off_address">Drop-Off Address</string>
    <string name="job_status">Job Status</string>
    <string name="received_by">Received By</string>
    <string name="update_status">Update Status</string>
    <string name="job_status_is_updated">Job status is updated</string>
    <string name="ok">ok</string>
    <string name="api_key">AIzaSyBuxSBaCpdovgHKLwPzC4UD_9RzK7NrTyk</string>
</resources>