<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_logout_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/are_you_sure_want_to_log_out"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_login"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:text="@string/no"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_yes"
            app:layout_constraintEnd_toStartOf="@+id/tv_yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_yes" />

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_login"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:text="@string/yes"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_no"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>