<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_status_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:gravity="start"
            android:text="@string/update_status"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/status_radioG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/textView21">
            <TextView
                android:id="@+id/opt_todo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:text="@string/to_do"
                android:checked="true"
                android:gravity="center"
                android:drawablePadding="2dp"
                android:paddingStart="5dp"
                android:drawableStart="@drawable/radio_button_selected"
                android:background="@drawable/radio_button_bg_selected"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/gray_lite_5"/>
            <TextView
                android:id="@+id/opt_progress"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/in_progress"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:drawablePadding="2dp"
                android:paddingStart="5dp"
                android:drawableStart="@drawable/radio_button"
                android:background="@drawable/radio_button_bg"
                app:layout_constraintTop_toTopOf="@id/opt_todo"
                app:layout_constraintBottom_toBottomOf="@id/opt_todo"
                app:layout_constraintEnd_toStartOf="@+id/opt_done"
                app:layout_constraintStart_toEndOf="@+id/opt_todo"
            android:textColor="@color/gray_lite_5"/>
            <TextView
                android:id="@+id/opt_done"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/done"
                android:textSize="14sp"
                android:gravity="center"
                android:drawablePadding="2dp"
                android:paddingStart="5dp"
                android:drawableStart="@drawable/radio_button"
                android:background="@drawable/radio_button_bg"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/gray_lite_5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_done"
            android:textAllCaps="true"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:text="@string/done"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_radioG" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>